--- a/app/views/nodes/index.html.erb
+++ b/app/views/nodes/index.html.erb
@@ -1,72 +1,71 @@
-<!doctype html>
-<!--By convention that I just made up, day entries should be saved as YYYY-MM-DD-->
-<html lang="en">
-  <body>
-    <div id= 'main' class="container clearfix">
-        
-      <div id="header" class="title grid_5">
-        <h1>Wiki Index<h1>
-      </div>
-      
-      <div id="text" class="grid_6 alpha">
-        <table>
-          <thead>
-            <tr>
-              <th>ID</th>
-              <th>Title</th>
-              <th>Author</th>
-              <th>Category</th>
-              <th>Created</th>
-              <th>Updated</th>
-            </tr>
-          </thead>
 
-          <tbody>
-            <% @nodes.each do |node| %>
-              <tr>
-                <td><%= node.id%></td>
-                <td><%= link_to node.title, node %></td>
-                <td><%= node.author %></td>
-                <td><%= node.category %></td>
-                <td><%= node.created_at %></td>
-                <td><%= node.updated_at %></td>
-                <td><%= button_to 'Edit', edit_node_path(node) %> <%= button_to "Delete", {:controller => :nodes,
-      :action => 'destroy', :id => node.id }, :confirm => 'Are you sure?', :method => :delete%></td>
-              </tr>
-            <% end %>
-            <br>
+<div id= 'main' class="container clearfix">
+    
+  <div id="header" class="title grid_5">
+    <p>Index of all nodes<%= " with category of #{@category.name}" unless @category.blank? %><p>
+  </div>
+  
+  <div id="text" class="grid_6 alpha">
+    <%= form_tag nodes_path, :method => :get do %>
+      <%= label_tag :category_id %><br>
+      <%= select_tag :category_id, options_from_collection_for_select(Category.all, :id, :name, params[:category_id]), :include_blank => true %>
+      <%= submit_tag "Apply" %>
+    <% end %>
+    <table>
+      <thead>
+        <tr>
+          <th>ID</th>
+          <th>Title</th>
+          <th>Author</th>
+          <th>Category</th>
+          <th>Created</th>
+          <th>Updated</th>
+        </tr>
+      </thead>
+      <tbody>
+        <% @nodes.each do |node| %>
+          <tr>
+            <td><%= node.id%></td>
+            <td><%= link_to node.title, node %></td>
+            <td><%= node.author %></td>
+            <td><%= node.category.name unless node.category.blank? %></td>
+            <td><%= node.created_at %></td>
+            <td><%= node.updated_at %></td>
+            <td><%= button_to 'Edit', edit_node_path(node), :method => :get %> <%= button_to "Delete", {:controller => :nodes,
+  :action => 'destroy', :id => node.id }, { :confirm => 'Are you sure?' , :method => :delete} %></td>
+          </tr>
+        <% end %>
+        <br>
 
-            <%= link_to 'New Node', new_node_path %>
-          </tbody>
-        </table>
-      </div>
+        <%= link_to 'New Node', new_node_path %>
+      </tbody>
+    </table>
+  </div>
 
-      <div id="sidebar" class="grid_3 omega clearfix">
-        <div class="feat_page_title">
-          <h2>Most Recent Entry:</h2>
-          <h3>Title of Entry</h3>
-        </div>
-        <div class="daily_img">
-          <%= image_tag "template.jpg" %>
-        </div>
-        <div class="info clearfix">
-          <table>
-            <tr>
-              <th>Total pages:</th> <td>number of pages</td>
-            </tr>
-            <tr>
-              <th>Pages / day:</th> <td>Number of pages created per day on average</td>
-            </tr>
-            <tr>
-              <th>Other stats:</th> <td>more stats</td>
-            </tr>
-            <tr>
-              <th>More other stats</th> <td>other stuff</td>
-            </tr>
-          </table>
-        </div>
-      </div>
-      
+  <div id="sidebar" class="grid_3 omega clearfix">
+    <div class="feat_page_title">
+      <h2>Most Recent Entry:</h2>
+      <h3>Title of Entry</h3>
     </div>
-	</body>
-</html>
+    <div class="daily_img">
+      <%= image_tag "template.jpg" %>
+    </div>
+    <div class="info clearfix">
+      <table>
+        <tr>
+          <th>Total pages:</th> <td>number of pages</td>
+        </tr>
+        <tr>
+          <th>Pages / day:</th> <td>Number of pages created per day on average</td>
+        </tr>
+        <tr>
+          <th>Other stats:</th> <td>more stats</td>
+        </tr>
+        <tr>
+          <th>More other stats</th> <td>other stuff</td>
+        </tr>
+      </table>
+    </div>
+  </div>
+  
+</div>
