--- a/app/views/layouts/base.html.erb
+++ b/app/views/layouts/base.html.erb
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Lifewiki</title>
-  <%= stylesheet_link_tag    "nodes", media: "all"%>
-  <%= javascript_include_tag "nodes", "jquery", "application"%>
+  <%= stylesheet_link_tag    "base", "nodes", media: "all"%>
+  <%= javascript_include_tag "nodes", "jquery", "jquery_ujs"%>
   <%= csrf_meta_tags %>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-  <title>M/D/YY</title>
   <link href='http://fonts.googleapis.com/css?family=Noticia+Text:400,700,400italic' rel='stylesheet' type='text/css'>
   <!-- <link rel="stylesheet" href="http://basehold.it/24"> -->
 </head>
@@ -24,8 +22,14 @@
     <div class="pocket_shadow"></div>
     <div class="pocket_hide"></div>
   </div>
+<div id= 'main' class="container clearfix">
+  
+  <% flash.each do |flash_type, message| %>
+  <div id="flash_<%= flash_type %>"><%= message %></div>
+  <% end %>
+  
+  <%= yield %>
 
-<%= yield %>
-
+</div>
 </body>
 </html>
