--- a/public/stylesheets/sass/nodes.scss
+++ b/public/stylesheets/sass/nodes.scss
@@ -2,7 +2,7 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-@import 'bones.scss';
+@import 'base.scss';
 
 // Colors:
 $primary: #EDEFF0;
@@ -54,7 +54,7 @@ $sans: 'Helvetica Neue', Helvetica, sans-serif;
 }
 
 #main {
-  margin-top: 20px;
+  margin-top: 35px;
   padding: 0 1%;
   border-radius: 5px;
 }
@@ -64,7 +64,7 @@ $sans: 'Helvetica Neue', Helvetica, sans-serif;
   font-size: 1.85rem;
   font-weight: bold;
   letter-spacing: -.5px;
-  margin: 15px 0 0 0;
+  margin: 0;
   text-indent: 5%;
   height: 42px;
   display: inline-block;
@@ -118,4 +118,8 @@ th, td {
 th {
   font-family: $sans;
   font-weight: bold;
+}
+
+form.button_to {
+  float: left;
 }
