formatting search fields

--- a/app/views/nodes/show.html.erb
+++ b/app/views/nodes/show.html.erb
@@ -1,7 +1,7 @@
 <div id="header" class="title grid_5">
   <h1><%= @node.title %></h1>
 </div>
-<div id="text" class="grid_5 alpha">
+<div id="main" class="grid_5 alpha">
   <p><%= @node.maintext %></p>
 </div>
 <div id="sidebar" class="grid_4 omega clearfix">
