--- a/app/views/layouts/base.html.erb
+++ b/app/views/layouts/base.html.erb
@@ -11,18 +11,18 @@
 <body>
   <div id="navbar">
     <nav class="clearfix">
-      <p><%= link_to 'Index', nodes_path %></p>
+      <div><%= link_to 'Index', nodes_path %></div>
       <ul>
-        <li><a href="#" class="link">Days</a></li>
-        <li><a href="#" class="link">People</a></li>
-        <li><a href="#" class="link">Places</a></li>
-        <li><a href="#" class="link">Concepts</a></li>
+        <li><a href="#" class="link">Link</a></li>
+        <li><a href="#" class="link">Link</a></li>
+        <li><a href="#" class="link">Link</a></li>
+        <li><a href="#" class="link">Link</a></li>
       </ul>
     </nav>
     <div class="pocket_shadow"></div>
     <div class="pocket_hide"></div>
   </div>
-<div id= 'main' class="container clearfix">
+<div id= 'container' class="container clearfix">
   
   <% flash.each do |flash_type, message| %>
   <div id="flash_<%= flash_type %>"><%= message %></div>
