--- a/app/views/nodes/index.html.erb
+++ b/app/views/nodes/index.html.erb
@@ -1,64 +1,70 @@
-  <div id="header" class="title grid_5">
-    <h1>Index of all nodes<%= " with category of #{@category.name}" unless @category.blank? %></h1>
+<div id="header" class="grid_6 clearfix alpha">
+  <div class="title">
+    <h1>Node Index</h1>
   </div>
-  
-  <div id="text" class="grid_6 alpha">
+  <ul class="search_index">
     <%= form_tag nodes_path, :method => :get do %>
-      <%= label_tag :category_id %><br>
-      <%= select_tag :category_id, options_from_collection_for_select(Category.all, :id, :name, params[:category_id]), :include_blank => true %>
-      <%= submit_tag "Apply" %>
+      <li class="search_title"><%= label_tag :title %><br>
+        <%= text_field_tag(:title) %></li>
+      <li class="search_category"><%= label_tag :category_id %><br>
+              <%= select_tag :category_id, options_from_collection_for_select(Category.all, :id, :name, params[:category_id]), :include_blank => true %></li>
+      <li class="search_submit"><%= submit_tag "Apply" %></li>
     <% end %>
-    <table>
-      <thead>
+  </ul>
+</div>
+
+<div id="main" class="grid_6 alpha">
+  <table>
+    <thead>
+      <tr>
+        <th>ID</th>
+        <th>Title</th>
+        <th>Author</th>
+        <th>Category</th>
+        <th>Created</th>
+        <th>Updated</th>
+        <th id="special"><%= button_to 'New', new_node_path, :method => :get %></th>
+      </tr>
+    </thead>
+    <tbody>
+      <% @nodes.each do |node| %>
         <tr>
-          <th>ID</th>
-          <th>Title</th>
-          <th>Author</th>
-          <th>Category</th>
-          <th>Created</th>
-          <th>Updated</th>
-          <th id="special"><%= button_to 'New', new_node_path, :method => :get %></th>
+          <td><%= node.id%></td>
+          <td><%= link_to node.title, node %></td>
+          <td><%= node.author %></td>
+          <td><%= node.category.name unless node.category.blank? %></td>
+          <td><%= prettytime(node.created_at) %></td>
+          <td><%= prettytime(node.updated_at) %></td>
+          <td><%= button_to 'Edit', edit_node_path(node), :method => :get %> <%= button_to "Delete", {:controller => :nodes,
+:action => 'destroy', :id => node.id }, { :confirm => 'Are you sure?' , :method => :delete} %></td>
         </tr>
-      </thead>
-      <tbody>
-        <% @nodes.each do |node| %>
-          <tr>
-            <td><%= node.id%></td>
-            <td><%= link_to node.title, node %></td>
-            <td><%= node.author %></td>
-            <td><%= node.category.name unless node.category.blank? %></td>
-            <td><%= prettytime(node.created_at) %></td>
-            <td><%= prettytime(node.updated_at) %></td>
-            <td><%= button_to 'Edit', edit_node_path(node), :method => :get %> <%= button_to "Delete", {:controller => :nodes,
-  :action => 'destroy', :id => node.id }, { :confirm => 'Are you sure?' , :method => :delete} %></td>
-          </tr>
-        <% end %>
-      </tbody>
+      <% end %>
+    </tbody>
+  </table>
+</div>
+
+<div id="sidebar" class="grid_3 omega clearfix">
+  <div class="feat_page_title">
+    <h2>Most Recent Entry:</h2>
+    <h3><%= Node.last.title %></h3>
+  </div>
+  <div class="daily_img">
+    <%= image_tag "template.jpg" %>
+  </div>
+  <div class="info clearfix">
+    <table>
+      <tr>
+        <th>Total pages:</th> <td>number of pages</td>
+      </tr>
+      <tr>
+        <th>Pages / day:</th> <td>Number of pages created per day on average</td>
+      </tr>
+      <tr>
+        <th>Other stats:</th> <td>more stats</td>
+      </tr>
+      <tr>
+        <th>More other stats</th> <td>other stuff</td>
+      </tr>
     </table>
   </div>
-
-  <div id="sidebar" class="grid_3 omega clearfix">
-    <div class="feat_page_title">
-      <h2>Most Recent Entry:</h2>
-      <h3><%= Node.last.title %></h3>
-    </div>
-    <div class="daily_img">
-      <%= image_tag "template.jpg" %>
-    </div>
-    <div class="info clearfix">
-      <table>
-        <tr>
-          <th>Total pages:</th> <td>number of pages</td>
-        </tr>
-        <tr>
-          <th>Pages / day:</th> <td>Number of pages created per day on average</td>
-        </tr>
-        <tr>
-          <th>Other stats:</th> <td>more stats</td>
-        </tr>
-        <tr>
-          <th>More other stats</th> <td>other stuff</td>
-        </tr>
-      </table>
-    </div>
-  </div>
+</div>
