--- a/public/stylesheets/sass/template.scss
+++ b/public/stylesheets/sass/template.scss
@@ -2,7 +2,7 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-@import 'bones.scss';
+@import 'base.scss';
 
 // Colors:
 $primary: #EDEFF0;
