--- a/app/views/layouts/base.html.erb
+++ b/app/views/layouts/base.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <%= stylesheet_link_tag    "base", "nodes", media: "all"%>
+  <%= stylesheet_link_tag    "nodes", media: "all"%>
   <%= javascript_include_tag "nodes", "jquery", "jquery_ujs"%>
   <%= csrf_meta_tags %>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
@@ -51,9 +51,9 @@
   <% flash.each do |flash_type, message| %>
   <div id="flash_<%= flash_type %>"><%= message %></div>
   <% end %>
-  
-  <%= yield %>
-
+  <div class='row'>
+    <%= yield %>
+  </div>
 </div>
 </body>
 </html>
