more/better bootstrap, removed obselete classes

--- a/app/views/layouts/base.html.erb
+++ b/app/views/layouts/base.html.erb
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <%= stylesheet_link_tag    "nodes", media: "all"%>
-  <%= javascript_include_tag "nodes", "jquery", "jquery_ujs"%>
+  <%= stylesheet_link_tag "nodes", "bootstrap", media: "all"%>
+  <%= javascript_include_tag "nodes", "bootstrap", "jquery", "jquery_ujs"%>
   <%= csrf_meta_tags %>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
   <link href='http://fonts.googleapis.com/css?family=Noticia+Text:400,700,400italic' rel='stylesheet' type='text/css'>
