--- a/app/views/nodes/show.html.erb
+++ b/app/views/nodes/show.html.erb
@@ -1,33 +1,37 @@
-<div id="header" class="title grid_5">
-  <h1><%= @node.title %></h1>
-</div>
-<div id="main" class="grid_5 alpha">
-  <p><%= @node.maintext %></p>
-</div>
-<div id="sidebar" class="grid_4 omega clearfix">
-  <div class="daily_img">
-    <%= image_tag "template.jpg" %>
-  </div>
-  <div class="info">
-    <table>
-      <tr>
-        <th>Mood:</th> <td>text</td>
-      </tr>
-      <tr>
-        <th>Attire:</th> <td>Description of clothes worn that will probably not be a whole lot longer than this sentence</td>
-      </tr>
-      <tr>
-        <th>Weather:</th> <td>temp, description</td>
-      </tr>
-      <tr>
-        <th>Attribute:</th> <td>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</td>
-      </tr>
-      <tr>
-        <th>Attribute:</th> <td>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</td>
-      </tr>
-      <tr>
-        <th>Attribute:</th> <td>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</td>
-      </tr>
-    </table>
+<div id="header" class="row">
+  <div class="title col-md-4 col-md-offset-4">
+    <h1><%= @node.title %></h1>
   </div>
 </div>
+<div class="row">
+  <div id="main" class="col-md-16">
+    <p><%= @node.maintext %></p>
+  </div>
+  <div id="sidebar" class="col-md-7 col-md-offset-1">
+    <div class="daily_img">
+      <%= image_tag "template.jpg" %>
+    </div>
+    <div class="info">
+      <table class="table">
+        <tr>
+          <th>Mood:</th> <td>text</td>
+        </tr>
+        <tr>
+          <th>Attire:</th> <td>Description of clothes worn that will probably not be a whole lot longer than this sentence</td>
+        </tr>
+        <tr>
+          <th>Weather:</th> <td>temp, description</td>
+        </tr>
+        <tr>
+          <th>Attribute:</th> <td>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</td>
+        </tr>
+        <tr>
+          <th>Attribute:</th> <td>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</td>
+        </tr>
+        <tr>
+          <th>Attribute:</th> <td>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</td>
+        </tr>
+      </table>
+    </div>
+  </div>
+</row>
