--- a/public/stylesheets/sass/nodes.scss
+++ b/public/stylesheets/sass/nodes.scss
@@ -42,6 +42,13 @@ $border: silver;
       text-indent: 2vw;
       margin: 0;
     }
+    h4 {
+      display: inline;
+    }
+  }
+  .title_edit {
+    font-family: $font-family-sans-serif;
+    font-size: 1.2rem;
   }
   .search_index li {
     float: left;
