--- a/public/stylesheets/sass/nodes.scss
+++ b/public/stylesheets/sass/nodes.scss
@@ -81,6 +81,7 @@ $border: silver;
   padding: 0;
   float: right;
   border-radius: 5px;
+  height: 800px;
   h3, h4 {
     font-family: $font-family-sans-serif;
     text-align: center;
